iac/apps/grafana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:10.4.1
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: grafana-storage
              mountPath: /var/lib/grafana
            - name: grafana-datasources
              mountPath: /etc/grafana/provisioning/datasources
              readOnly: true
            - name: grafana-dashboards
              mountPath: /var/lib/grafana/dashboards-json
              readOnly: true
            - name: grafana-dashboard-provisioning # <--- ДОБАВЛЕНО: для файла конфигурации провизионирования
              mountPath: /etc/grafana/provisioning/dashboards/dashboards.yaml # Монтируем конкретный файл
              subPath: dashboards.yaml # Указываем, какой файл из ConfigMap монтируем
              readOnly: true
      volumes:
        - name: grafana-storage
          persistentVolumeClaim:
            claimName: grafana-pvc
        - name: grafana-datasources
          configMap:
            name: grafana-datasources
        - name: grafana-dashboards
          configMap:
            name: grafana-dashboards-list
        - name: grafana-dashboard-provisioning
          configMap:
            name: grafana-dashboard-provisioning
